fix color contrast

--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -611,7 +611,7 @@
 @media (prefers-contrast: more) {
     :root {
         --color-dark: #000000;
-        --color-text: #faf5f5;
+        --color-text: #000000;
     }
 
     .member-link {
